--- a/assets/css/style.2.css
+++ b/assets/css/style.2.css
@@ -80,7 +80,7 @@ NAV.main UL LI A:hover{color:#4f8cf8;}
 .logo{float:left;margin:15px 0 0 0;font-size:0;}
 .logo H3{float:right;font:normal 40px 'latoblack', helvetica, arial, sans-serif;color:#6c768a;margin:15px 0 0 30px;}
 .logo-icon{width:95px;height:97px;display:inline-block;background:transparent url('../images/mailplane-logo.png') no-repeat;background-size:95px;}
-.switches{position:absolute;top:20px;right:30px;}
+.switches{position:absolute;top:20px;right:53px;}
 .switches div{font:normal 11px 'latoblack', helvetica, arial, sans-serif;color:#6c768a;letter-spacing:1px;text-align:right;display:inline}
 .switches a{text-transform:uppercase;text-decoration:none;color: #4f8bf8}
 .switches .theme-switch a{color:#6c768a}
